hw34 class solution